--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,13 @@
 <resources>
     <string name="app_name">ProgettoMonk</string>
-    <string name="register"> Register </string>
-    <string name="login">Login</string>
+    <string name="register"> Registrami </string>
+    <string name="login">Accedi</string>
     <string name="password">Password</string>
     <string name="username">Username</string>
-    <string name="login_register">No account yet? Create one</string>
+    <string name="login_register">Registrati Ora</string>
     <string name="name">Name</string>
     <string name="surname">Surname</string>
-    <string name="register_login">Already a member? Login</string>
-    <string name="email">E-mail</string>
+    <string name="register_login">Sei già un membro? Accedi!</string>
+    <string name="email">Email</string>
+    <string name="pswDimenticata">Password dimenticata</string>
 </resources>
